--- a/styles/partials/page-landing.css
+++ b/styles/partials/page-landing.css
@@ -2,7 +2,7 @@
     font-size: 40%
 }
 
-#page-landing{
+#page-landing {
     background: var(--color-primary);
 }
 
@@ -10,8 +10,20 @@
     color: var(--color-text-in-primary)
 }
 
-.logo-container img{
+.logo-container img {
     height: 10rem;
+}
+
+.logo-container {
+    text-align: center;
+    margin-bottom: 3.2rem;
+}
+
+.logo-container h2{
+    font-weight: 500;
+    font-size: 3.6rem;
+    line-height: 4.6rem;
+    margin-top: 0.8rem;
 }
 
 .hero-image {
