--- a/styles/partials/page-landing.css
+++ b/styles/partials/page-landing.css
@@ -46,7 +46,13 @@
     align-items: center;
     justify-content: center;
     text-decoration: none;
+    transition: background 0.2s;
     color: var(--color-button-text)
+}
+
+.buttons-container a img {
+    width: 4rem;
+    margin-right: 2.4;
 }
 
 .button a {
@@ -57,7 +63,15 @@
     background: var(--color-primary-lighter);
 }
 
+.buttons-container a.study:hover {
+    background: var(--color-primary-light);
+}
+
 .buttons-container a.give-classes {
     background: var(--color-secondary);
     margin-right: 0;
+}
+
+.buttons-container a.give-classes:hover {
+    background: var(--color-secondary-dark);
 }
