--- a/styles/partials/page-landing.css
+++ b/styles/partials/page-landing.css
@@ -75,3 +75,15 @@
 .buttons-container a.give-classes:hover {
     background: var(--color-secondary-dark);
 }
+
+.total-connections {
+    font-size: 1.8rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
+
+.total-connections img {
+    margin-left: 0.8rem;
+}
